Livery: added thumb and icon calculation. Folder is now relative to "liveries" folder